--- a/public/components/meteor-status.html
+++ b/public/components/meteor-status.html
@@ -1,14 +1,18 @@
-<polymer-element name="meteor-status">
-  <script>
-    Polymer('meteor-status', {
-      publish: {
-        status: null,
-      },
-      ready: function() {
-        this.computation = Tracker.autorun(function() {
-          this.status = Meteor.status();
-        }.bind(this));
+<link rel="import" href="../bower_components/polymer/polymer.html">
+
+<script>
+  Polymer({
+    is: 'meteor-status',
+    properties: {
+      status: {
+        type: Object,
+        notify: true
       }
-    });
-  </script>
-</polymer-element>
+    },
+    ready: function() {
+      this.computation = Tracker.autorun(function() {
+        this.status = Meteor.status();
+      }.bind(this));
+    }
+  });
+</script>
